fixed spacing within cards in movie page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -232,6 +232,7 @@ body {
   overflow-y: auto;
   position: relative;
   display: grid;
+  grid-gap: 1rem;
   grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
   grid-auto-rows: 100%;
   place-items: center;
